fix statuspicker thing being invisible

--- a/src/components/color.css
+++ b/src/components/color.css
@@ -58,11 +58,11 @@
 }
 .colorBrandNew-abZT3v:hover,
 .bd-button:hover,
-.menuItemFocused-2cC4Ku {
+.menuItemFocused-1a4_bh {
 	background-color: var(--blurple-hover) !important;
 }
 .colorBrandNew-abZT3v:active,
-.menuItemFocused-2cC4Ku:active,
+.menuItemFocused-1a4_bh:active,
 .lookFilled-1H2Jvj.colorBrand-2M3O3N:active,
 .bd-button:active {
 	background-color: var(--blurple-active) !important;
