--- a/src/components/other.css
+++ b/src/components/other.css
@@ -192,12 +192,12 @@
 .banner-3Uu4yV,
 .container-1eD8xH,
 .item-1TA5qI .radioBar-1XgZqD circle,
-.accountProfilePopoutWrapper-3GskID .bannerSVGWrapper-qc0szY,
+.accountProfilePopoutWrapper-3GskID .bannerSVGWrapper-2CLfzN,
 .accountProfilePopoutWrapper-3GskID .avatarWrapper-eenWra,
-.accountProfilePopoutWrapper-3GskID .profileBadges-31rDHI,
+.accountProfilePopoutWrapper-3GskID .profileBadges-2pItdR,
 .accountProfilePopoutWrapper-3GskID .userProfileInner-1ngKnf:before,
-.accountProfilePopoutWrapper-3GskID .userPopoutOverlayBackground-3A0Pcz div:not(.menu-2TXYjN, .menu-KSaHL1 *),
 .accountProfilePopoutWrapper-3GskID [id="account-divider-1"],
+.accountProfilePopoutWrapper-3GskID .userPopoutOverlayBackground-3A0Pcz div:not(.menu-2TXYjN, .menu-2-eHMB *),
 .unreadIcon-3dqgX9,
 .container-1QtPKm svg,
 .communityInfoPill-2Mll66,
